# xmind

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md
.github/: release.yml
.github/workflows/: ci.yml  msstore.yml  release.yml  website.yml
packaging/msstore/: AppxManifest.xml
resources/: resources.qrc  theme.qss
src/: AppSettings.cpp  AppSettings.h  Commands.cpp  Commands.h  EdgeItem.cpp  EdgeItem.h  FileManager.cpp  FileManager.h  IconFactory.cpp  IconFactory.h  LayoutEngine.cpp  LayoutEngine.h  MainWindow.cpp  MainWindow.h  MindMapScene.cpp  MindMapScene.h  MindMapView.cpp  MindMapView.h  NodeItem.cpp  NodeItem.h  OutlineWidget.cpp  SettingsDialog.cpp  SettingsDialog.h  StartPage.cpp  StartPage.h  StyleSheetGenerator.cpp  StyleSheetGenerator.h  TabManager.cpp  TabManager.h  ThemeManager.cpp  ThemeManager.h  main.cpp
src/core/: AboutDialog.cpp  AboutDialog.h  AppSettings.cpp  AppSettings.h  Commands.cpp  Commands.h  FileManager.cpp  FileManager.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  TemplateDescriptor.cpp  TemplateDescriptor.h  TemplateRegistry.cpp  TemplateRegistry.h  UpdateChecker.cpp  UpdateChecker.h
src/layout/: BilateralLayout.cpp  BilateralLayout.h  ILayoutAlgorithm.h  LayoutAlgorithmBase.cpp  LayoutAlgorithmBase.h  LayoutAlgorithmRegistry.cpp  LayoutAlgorithmRegistry.h  LayoutEngine.cpp  LayoutEngine.h  LayoutStyle.h  RightTreeLayout.cpp  RightTreeLayout.h  TopDownLayout.cpp  TopDownLayout.h
src/scene/: EdgeItem.cpp  EdgeItem.h  InlineEditController.cpp  InlineEditController.h  MindMapExporter.cpp  MindMapExporter.h  MindMapScene.cpp  MindMapScene.h  MindMapSerializer.cpp  MindMapSerializer.h  MindMapView.cpp  MindMapView.h  NodeItem.cpp  NodeItem.h
src/ui/: IconFactory.cpp  IconFactory.h  OutlineWidget.cpp  OutlineWidget.h  StartPage.cpp  StartPage.h  StyleSheetGenerator.cpp  TabManager.cpp  TabManager.h  ThemeManager.cpp  ThemeManager.h
tests/: CMakeLists.txt  tst_AppSettings.cpp  tst_LayoutAlgorithmRegistry.cpp  tst_LayoutStyle.cpp  tst_MindMapSceneSerialization.cpp  tst_TemplateDescriptor.cpp  tst_TemplateRegistry.cpp
translations/: ymind_zh_CN.ts
website/: index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx
website/src/components/: AnimationDemo.tsx  Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  LayoutShowcase.tsx  Navbar.tsx  Screenshots.tsx
website/src/hooks/: useScrollSpy.ts
website/src/i18n/: LanguageContext.tsx  en.ts  zh.ts
